[579905] Use the jst.web facet to pick the default JSP supertype
         Only applies on Dynamic Web Projects. Other Java projects
         will continue to rely on what's found on the Build Path.

         Also fix the caching mechanism.

Change-Id: I677da9d8de3c59ed6dc8eee4677bf13a44a908b7